fixed flappy maniek offscreen issues

--- a/css/games/flappymaniek.css
+++ b/css/games/flappymaniek.css
@@ -120,7 +120,7 @@ section.flappymaniek .screen {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 12em;
+    /* gap: 12em; */
 }
 
 .pipe {
